Some collapsed text tag fixes.

--- a/css/base/arlenadja.css
+++ b/css/base/arlenadja.css
@@ -252,7 +252,7 @@
 
 /* Link colors. */
 
-.arlenadja_bg a:link, .arlenadja_bg a.collapsed-toggle:link {
+.arlenadja_bg a:link, .arlenadja_bg a.collapsed-toggle, .arlenadja_bg a.collapsed-toggle:link {
 	color: #1E88E5;
 	text-decoration: none;
 	text-shadow: inherit;
