--- a/css/base/rulue.css
+++ b/css/base/rulue.css
@@ -256,7 +256,7 @@
  * lighter/darker areas, so I made them easy to distinguish.
  */
 
-.rulue_bg > .rulue_post a:link, .rulue_bg > .rulue_post a.collapsed-toggle:link {
+.rulue_bg > .rulue_post a:link, .rulue_bg > .rulue_post a.collapsed-toggle, .rulue_bg > .rulue_post a.collapsed-toggle:link {
 	color: #1E88E5;
 	text-decoration: none;
 	text-shadow: inherit;
@@ -296,7 +296,7 @@
 	-webkit-transition: all 0.5s;
 }
 
-.rulue_bg > .rulue_sig a:link, .rulue_bg > .rulue_sig a.collapsed-toggle:link {
+.rulue_bg > .rulue_sig a:link, .rulue_bg > .rulue_sig a.collapsed-toggle, .rulue_bg > .rulue_sig a.collapsed-toggle:link {
 	color: #81D4FA;
 	text-decoration: none;
 	text-shadow: inherit;
@@ -338,7 +338,7 @@
 
 /* The rest here are the main link colors. */
 
-.rulue_bg a:link, .rulue_bg a.collapsed-toggle:link {
+.rulue_bg a:link, .rulue_bg a.collapsed-toggle, .rulue_bg a.collapsed-toggle:link {
 	color: #03A9F4;
 	text-decoration: none;
 	text-shadow: inherit;
