--- a/css/classicblue.css
+++ b/css/classicblue.css
@@ -253,7 +253,7 @@
  * while the other, Baby Blue!
  */
 
-.classicblue_bg a:link, .classicblue_bg a.collapsed-toggle:link {
+.classicblue_bg a:link, .classicblue_bg a.collapsed-toggle, .classicblue_bg a.collapsed-toggle:link {
 	color: #B3C6D5;
 	text-decoration: none;
 	text-shadow: inherit;
