--- a/css/kamekku14kensaholiday.css
+++ b/css/kamekku14kensaholiday.css
@@ -311,7 +311,7 @@
 	-webkit-transition: all 0.5s;
 }
 
-.kamekku14kensaholiday_bg a.collapsed-toggle:link {
+.kamekku14kensaholiday_bg a.collapsed-toggle, .kamekku14kensaholiday_bg a.collapsed-toggle:link {
 	color: #eeeeee;
 	background: #2D2D2D;
 	text-shadow: inherit;
@@ -322,7 +322,6 @@
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	padding: 4px;
-	vertical-align: sub;
 	-moz-transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	transition: all 0.5s;
@@ -330,7 +329,7 @@
 
 .kamekku14kensaholiday_bg a.collapsed-toggle:hover {
 	color: #eeeeee;
-	background: #484848;
+	background: #484848 !important;
 	text-shadow: inherit;
 	text-decoration: none;
 	font-weight: 600;
@@ -339,7 +338,6 @@
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	padding: 4px;
-	vertical-align: sub;
 	-moz-transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	transition: all 0.5s;
@@ -347,7 +345,7 @@
 
 .kamekku14kensaholiday_bg a.collapsed-toggle:active {
 	color: #eeeeee;
-	background: #373737;
+	background: #373737 !important;
 	text-shadow: inherit;
 	text-decoration: none;
 	font-weight: 600;
@@ -356,7 +354,6 @@
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	padding: 4px;
-	vertical-align: sub;
 	-moz-transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	transition: all 0.5s;
